WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231106
REGRESSION (
r275455
): ASSERTION FAILED: process->hasOneRef() seen with TestWebKitAPI.WKProcessPool.WarmInitialProcess
https://bugs.webkit.org/show_bug.cgi?id=231106
Summary
REGRESSION (r275455): ASSERTION FAILED: process->hasOneRef() seen with TestWe...
Chris Dumez
Reported
2021-10-01 15:09:28 PDT
TestWebKitAPI.WKProcessPool.WarmInitialProcess ASSERTION FAILED: process->hasOneRef() /Volumes/Data/worker/trunk-star-debug-archive/build/OpenSource/Source/WebKit/UIProcess/WebProcessPool.cpp(308) : virtual WebKit::WebProcessPool::~WebProcessPool() 1 0x1154cdd80 WTFCrash 2 0x13fe1c51c std::__1::optional<JSC::JSValue>::optional<JSC::JSValue, 0>(JSC::JSValue&&) 3 0x1413b5884 WebKit::WebProcessPool::~WebProcessPool() 4 0x1413b662c WebKit::WebProcessPool::~WebProcessPool() 5 0x140dfe4a8 -[WKProcessPool dealloc] 6 0x10275ee54 WTF::RetainPtr<WKProcessPool>::~RetainPtr() 7 0x10275ea90 WTF::RetainPtr<WKProcessPool>::~RetainPtr() 8 0x102ca97a8 WKProcessPool_WarmInitialProcess_Test::TestBody() 9 0x1031c0400 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 10 0x1031886f4 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 11 0x103188620 testing::Test::Run() 12 0x1031897a0 testing::TestInfo::Run() 13 0x10318aaa8 testing::TestSuite::Run() 14 0x103197940 testing::internal::UnitTestImpl::RunAllTests() 15 0x1031c5c48 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 16 0x10319729c bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 17 0x10319718c testing::UnitTest::Run() 18 0x102f718d8 RUN_ALL_TESTS() 19 0x102f71864 TestWebKitAPI::TestsController::run(int, char**) 20 0x10315c310 main 21 0x10598d0fc
Attachments
Patch
(3.05 KB, patch)
2021-10-01 15:13 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-10-01 15:13:05 PDT
Created
attachment 439917
[details]
Patch
Geoffrey Garen
Comment 2
2021-10-01 15:34:33 PDT
Comment on
attachment 439917
[details]
Patch r=me
Chris Dumez
Comment 3
2021-10-01 15:38:56 PDT
<
rdar://80487792
>
EWS
Comment 4
2021-10-02 17:25:05 PDT
Committed
r283456
(
242435@main
): <
https://commits.webkit.org/242435@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439917
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug